--- a/ResumeApp/ResumeApp.csproj
+++ b/ResumeApp/ResumeApp.csproj
@@ -420,6 +420,10 @@
     <Content Include="Content\iziToast-master\iziToast-master\src\js\iziToast.js" />
     <Content Include="Content\PagedList.css" />
     <Content Include="Content\SearchScript.js" />
+    <Content Include="Content\siteContent\images\logos\onto.png" />
+    <Content Include="Content\siteContent\images\logos\Onto2.png" />
+    <Content Include="Content\siteContent\images\logos\Onto3.png" />
+    <Content Include="Content\siteContent\images\logos\OntoMag.png" />
     <Content Include="Content\typeahead.css" />
     <Content Include="Content\UploadScript.js" />
     <Content Include="Content\usersScript.js" />
@@ -609,6 +613,7 @@
     <Content Include="ClassDiagram1.cd" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <None Include="Properties\PublishProfiles\CustomProfile1.pubxml" />
+    <None Include="Properties\PublishProfiles\Ontomag - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <None Include="Scripts\jquery-3.5.1-vsdoc.js" />
     <Content Include="Scripts\bootstrap3-typeahead.js" />
