--- a/ResumeApp/Web.config
+++ b/ResumeApp/Web.config
@@ -10,8 +10,9 @@
   </configSections>
   <connectionStrings>
         <!--<add name="DefaultConnection" connectionString="Data Source=db823620570.hosting-data.io,1433;Initial Catalog=db823620570;User Id=dbo823620570;Password=Ionos123!; " providerName="System.Data.SqlClient" />-->
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ResumeApp-202002010918511.mdf;Initial Catalog=aspnet-ResumeApp-202002010918511;Integrated Security=True" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ResumeApp-202002010918511.mdf;Initial Catalog=aspnet-ResumeApp-202002010918511;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+    <add name="DefaultConnection" connectionString="Server=tcp:resumeserver.database.windows.net,1433;Initial Catalog=resuma;Persist Security Info=False;User ID=amilkar;Password=GoHell123!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />  
+    </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
